Fix overlapping text in registration form

--- a/apps/dpnk/static/less/style.less
+++ b/apps/dpnk/static/less/style.less
@@ -140,7 +140,6 @@ input[type="radio"], input[type="checkbox"]{
 .after_form{
    bottom: 1em;
    margin-top: auto;
-   position: absolute;
    font-size: smaller;
 }
 .lang_switch{
